# colibo-docs-extrator

./: .dockerignore  .gitignore  Dockerfile  README.md  helpers.py  main.py  pyproject.toml
colibo/: client.py
db/: models.py  sync_manager.py  token_manager.py
openwebui/: client.py  exceptions.py
